# lexerParserExample

./: README.md  di8-lexer-parser.cabal  stack.yaml
src/Language/: Lexer.x  Parser.y  Types.hs
