name:                di8-lexer-parser
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

Library
  ghc-options:        -W
  exposed-modules:    Language.Types,
                      Language.Parser
  build-depends:      mtl,
                      base,
                      array
  hs-source-dirs:     src
  default-language:   Haskell2010
  build-tools:        alex, happy
  other-modules:      Language.Lexer
